--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -25,7 +25,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css","src/styles.scss"
+              "src/styles.css"
             ],
             "scripts": []
           },
