--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "angular-ng-autocomplete": "^2.0.12",
     "angular-star-rating": "^6.0.0",
     "ngx-bar-rating": "^4.0.1",
     "ngx-stars": "^1.6.4",
