--- a/backend/src/package.json
+++ b/backend/src/package.json
@@ -7,7 +7,9 @@
     "typescript": "^4.9.5"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17"
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1"
   }
 }
