created checkout page, order page

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.0.0",
     "angular-ng-autocomplete": "^2.0.12",
     "angular-star-rating": "^6.0.0",
+    "leaflet": "^1.9.3",
     "ngx-bar-rating": "^4.0.1",
     "ngx-stars": "^1.6.4",
     "ngx-toastr": "^16.0.2",
@@ -32,6 +33,7 @@
     "@angular/cli": "~15.0.5",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/leaflet": "^1.9.1",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
