--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   },
   "scripts": {
       "start": "cd backend/built && node server.js",
-      "prebuild": "cd backend && npm run build",
-      "build": "cd frontend && npm run build"
+      "prebuild": "cd backend && npm run build"
   }
 }
